variables.Variables.scala.error
Compilation error:
Variables:6: error: not found: value StepAmount
  while (StepAmount!=0) {
         ^Variables:9: error: not found: value dropBAggle
  dropBAggle()
  ^