variables.Variables.scala.code
var stepAmount:Int=0
while(!isOverBaggle()){
  forward()
  stepAmount = stepAmount + 1
pickupBaggle()
	while (StepAmount!=0) {
  	backward()
  	stepAmount= stepAmount -1
	dropBAggle()
  }
}